Fix Reply icons overlapping with reply text

--- a/assets/admin/less/admin.less
+++ b/assets/admin/less/admin.less
@@ -303,7 +303,6 @@ Ticket Replies
 }
 .wpas-reply-meta {
 	.wpas-cf;
-	padding-bottom: 0.75em;
 
 	.wpas-reply-user {
 		float: left;
@@ -375,6 +374,11 @@ Ticket Replies
 		height: auto;
 	}
 }
+
+.wpas-reply-content {
+        margin-top: 28px;
+}
+
 .wpas-table-replies td {
 	/* Restore default paragraph style */
 	p + p {
